--- a/saybabook_app/templates/saybabook_app/components/navbar.html
+++ b/saybabook_app/templates/saybabook_app/components/navbar.html
@@ -28,6 +28,12 @@
           >
         </li>
         <li class="nav-item">
+           {% url 'mybooks' as mybooks_url%}
+          <a class="nav-link {% if request.path == archive_url %}active{% endif %}" aria-current="page" href="{%url 'mybooks'%}"
+            >Mybooks</a
+          >
+        </li>
+        <li class="nav-item">
            {% url 'archive' as archive_url%}
           <a class="nav-link {% if request.path == archive_url %}active{% endif %}" aria-current="page" href="{%url 'archive'%}"
             >Archive</a
