archive works now and deleting a book works now

--- a/saybabook_app/templates/saybabook_app/addbook.html
+++ b/saybabook_app/templates/saybabook_app/addbook.html
@@ -120,6 +120,7 @@
           <option value="completed">Completed</option>
           <option value="plan_to_read">Plan to Read</option>
           <option value="dropped">Dropped</option>
+          <option value="archived">Archived</option>
         </select>
     </div>
 
