--- a/saybabook_app/templates/saybabook_app/mybooks.html
+++ b/saybabook_app/templates/saybabook_app/mybooks.html
@@ -12,5 +12,6 @@
   </head>
   <body>
       {% include 'saybabook_app/components/navbar.html' %}
+      {% include 'saybabook_app/components/cardscontent.html' %}
   </body>
 </html>
