--- a/saybabook_app/templates/saybabook_app/archive.html
+++ b/saybabook_app/templates/saybabook_app/archive.html
@@ -12,5 +12,7 @@
   </head>
   <body>
       {% include 'saybabook_app/components/navbar.html' %}
+      {% include 'saybabook_app/components/cardscontent.html' %}
+
   </body>
 </html>
