--- a/saybabook_app/templates/saybabook_app/components/navbar.html
+++ b/saybabook_app/templates/saybabook_app/components/navbar.html
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item">
            {% url 'archive' as archive_url%}
-          <a class="nav-link {% if request.path == archive_url %}active{% endif %}" aria-current="page" href="{%url 'archive'%}"
+          <a class="nav-link {% if request.path == archive_url %}active{% endif %}" aria-current="page" href="{%url 'book.archive.show'%}"
             >Archive</a
           >
         </li>
