--- a/saybabook_app/templates/saybabook_app/components/cardscontent.html
+++ b/saybabook_app/templates/saybabook_app/components/cardscontent.html
@@ -38,7 +38,7 @@
                 <strong>Description:</strong> {{ book.book_description|truncatechars:100 }}
             </p>
             
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">View Details</a>
             <a href="{% url 'book.delete' book.pk %}" class="btn btn-danger">Delete</a>
         </div>
     </div>
