--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -8,9 +8,42 @@
       rel="stylesheet"
       href="{% static 'saybabook_app/vendor/bootstrap-5.3.8-dist/css/bootstrap.min.css' %}"
     />
-    <title>Document</title>
+    <title>Landing Page</title>
   </head>
   <body>
-      {% include 'saybabook_app/components/navbar.html' %}
+    <div class="container">
+      <form
+        method="POST"
+        action="{% url 'user.create'%}"
+        enctype="multipart/form-data"
+      >
+        {% csrf_token %} {{ form.non_field_errors }}
+        <div class="mb-3">
+          <label for="id_user_name" class="form-label">Username</label>
+          <input
+            name="user_name"
+            type="text"
+            class="form-control"
+            id="id_user_name"
+            value="{{ form.user_name.value|default_if_none:'' }}"
+          />
+          <div class="text-danger small">{{ form.user_name.errors }}</div>
+          <div id="userAria" class="form-text">
+            This username will be used to login
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="id_user_password" class="form-label">Password</label>
+          <input
+            name="user_password"
+            type="password"
+            class="form-control"
+            id="id_user_password"
+          />
+          <div class="text-danger small">{{ form.user_password.errors }}</div>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
+    </div>
   </body>
 </html>
