--- a/saybabook_app/templates/saybabook_app/browse.html
+++ b/saybabook_app/templates/saybabook_app/browse.html
@@ -13,5 +13,7 @@
   <body>
     {% include 'saybabook_app/components/navbar.html' %}
     {% include 'saybabook_app/components/cardscontent.html' %}
+    {% include 'saybabook_app/components/scripts.html' %}
+
   </body>
 </html>
