--- a/saybabook_app/templates/saybabook_app/mybooks.html
+++ b/saybabook_app/templates/saybabook_app/mybooks.html
@@ -13,6 +13,7 @@
   <body>
       {% include 'saybabook_app/components/navbar.html' %}
       {% include 'saybabook_app/components/cardscontent.html' %}
+      {% include 'saybabook_app/components/bookmodal.html' %}
       {% include 'saybabook_app/components/scripts.html' %}
 
   </body>
