--- a/saybabook_app/templates/saybabook_app/components/navbar.html
+++ b/saybabook_app/templates/saybabook_app/components/navbar.html
@@ -35,7 +35,7 @@
           <a
             class="nav-link {% if request.path == archive_url %}active{% endif %}"
             aria-current="page"
-            href="{%url 'mybooks'%}"
+            href="{%url 'book.private.show'%}"
             >Mybooks</a
           >
         </li>
@@ -58,7 +58,7 @@
         />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <a  href="{%url 'account.show'%}">
+      <a  href="{%url 'account.edit'%}">
         <button
           class="btn btn-outline-success"
           type="button"
