--- a/saybabook_app/templates/saybabook_app/components/scripts.html
+++ b/saybabook_app/templates/saybabook_app/components/scripts.html
@@ -1,2 +1,3 @@
 {% load static %}
 <script src="{% static 'saybabook_app/vendor/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'saybabook_app/js/ajaxcall.js'%}"></script>
