can now login through landingpage

--- a/saybabook_app/templates/saybabook_app/account.html
+++ b/saybabook_app/templates/saybabook_app/account.html
@@ -15,7 +15,7 @@
     <div class="container">
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-
+        {{ form.as_p }}
         <div class="mb-3">
           <label for="id_profile_picture" class="form-label"
             >Profile Picture</label
