--- a/saybabook_app/templates/saybabook_app/account.html
+++ b/saybabook_app/templates/saybabook_app/account.html
@@ -13,73 +13,68 @@
   <body>
     {% include 'saybabook_app/components/navbar.html' %}
     <div class="container">
-         <div class="mb-3">
-          <label for="id_username" class="form-label">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            id="id_username"
-            name="user_name"
-            required
-            value="{{ form.user_name.value|default_if_none:'' }}"
-          />
-        </div>
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+
         <div class="mb-3">
-          <label for="id_profile_picture" class="form-label"
-            >Profile Picture</label
+          <label for="{{ user_form.user_name.id_for_label }}" class="form-label"
+            >Username</label
           >
-          <div class="mb-2">
-            <img
-              src="{{ current_image_url }}"
-              alt="Current Profile Picture"
-              class="img-thumbnail"
-              style="max-width: 150px; max-height: 150px"
-            />
-          </div>
-          <input
-            type="file"
-            class="form-control"
-            id="id_profile_picture"
-            name="profile_picture"
-            accept="image/*"
-          />
-          <div class="form-text">
-            Upload a new image to change your profile picture.
-          </div>
+          {{ user_form.user_name }}
+          <div class="text-danger small">{{ user_form.user_name.errors }}</div>
         </div>
 
         <hr />
 
         <div class="mb-3">
-          <label for="id_name" class="form-label">Full Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="id_name"
-            name="name"
-            required
-            value="{{ form.name.value|default_if_none:'' }}"
-          />
+          <label
+            for="{{ profile_form.userImage.id_for_label }}"
+            class="form-label"
+            >Profile Picture</label
+          >
+
+          <div class="mb-2">
+            {% if user_profile.userImage %}
+            <img
+              src="{{ user_profile.userImage.url }}"
+              alt="Current Profile Picture"
+              class="img-thumbnail"
+              style="max-width: 150px; max-height: 150px"
+            />
+            {% else %}
+            <p>No profile picture set.</p>
+            {% endif %}
+          </div>
+
+          {{ profile_form.userImage }}
+          <div class="form-text">
+            Upload a new image to change your profile picture.
+          </div>
+          <div class="text-danger small">
+            {{ profile_form.userImage.errors }}
+          </div>
         </div>
 
         <div class="mb-3">
-          <label for="id_email" class="form-label">Email Address</label>
-          <input
-            type="email"
-            class="form-control"
-            id="id_email"
-            name="email"
-            aria-describedby="emailHelp"
-            required
-            value="{{ form.email.value|default_if_none:'' }}"
-          />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else. .
-          </div>
+          <label for="{{ profile_form.name.id_for_label }}" class="form-label"
+            >Full Name</label
+          >
+          {{ profile_form.name }}
+          <div class="text-danger small">{{ profile_form.name.errors }}</div>
         </div>
+
+        <div class="mb-3">
+          <label for="{{ profile_form.email.id_for_label }}" class="form-label"
+            >Email Address</label
+          >
+          {{ profile_form.email }}
+          <div class="form-text">
+            We'll never share your email with anyone else.
+          </div>
+          <div class="text-danger small">{{ profile_form.email.errors }}</div>
+        </div>
+
+        {{ user_form.media }} {{ profile_form.media }}
 
         <button type="submit" class="btn btn-primary">Save Changes</button>
       </form>
