--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -12,72 +12,58 @@
   </head>
   <body>
     <div class="container">
-      <form
-        method="POST"
-        action="{% url 'user.create'%}"
-        enctype="multipart/form-data"
-      >
-        {% csrf_token %} {{ form.non_field_errors }}
-        <div class="mb-3">
-          <label for="id_user_name" class="form-label">Username</label>
-          <input
-            name="user_name"
-            type="text"
-            class="form-control"
-            id="id_user_name"
-            value="{{ form.user_name.value|default_if_none:'' }}"
-          />
-          <div class="text-danger small">{{ form.user_name.errors }}</div>
-          <div id="userAria" class="form-text">
-            This username will be used to login
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="id_user_password" class="form-label">Password</label>
-          <input
-            name="user_password"
-            type="password"
-            class="form-control"
-            id="id_user_password"
-          />
-          <div class="text-danger small">{{ form.user_password.errors }}</div>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-      </form>
-    </div>
-    <div class="container">
-      <form
-        method="POST"
-        action="{% url 'user.login'%}"
-        enctype="multipart/form-data"
-      >
-        {% csrf_token %} {{ form.non_field_errors }}
-        <div class="mb-3">
-          <label for="id_user_name" class="form-label">Username</label>
-          <input
-            name="username"
-            type="text"
-            class="form-control"
-            id="id_user_name"
-            value="{{ form.user_name.value|default_if_none:'' }}"
-          />
-          <div class="text-danger small">{{ form.user_name.errors }}</div>
-          <div id="userAria" class="form-text">
-            This username will be used to login
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="id_user_password" class="form-label">Password</label>
-          <input
-            name="password"
-            type="password"
-            class="form-control"
-            id="id_user_password"
-          />
-          <div class="text-danger small">{{ form.user_password.errors }}</div>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-    </div>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        
+        <fieldset>
+            <legend>Account Details</legend>
+            {{ form.as_p }}
+        </fieldset>
+
+        <hr />
+
+        <fieldset>
+            <legend>Profile Details</legend>
+            {{ profile_formset.management_form }}
+            
+            {% for profile_form in profile_formset %}
+                {% if profile_form.instance.pk %}
+                    <h4>Current Profile Picture</h4>
+                    {% if profile_form.instance.userImage %}
+                        <img src="{{ profile_form.instance.userImage.url }}" 
+                             alt="Current Profile Picture" 
+                             class="img-thumbnail" 
+                             style="max-width: 150px; max-height: 150px"
+                        />
+                    {% endif %}
+                {% endif %}
+                
+                {{ profile_form.id }} 
+                
+                <div class="mb-3">
+                    <label for="{{ profile_form.name.id_for_label }}" class="form-label">Full Name</label>
+                    {{ profile_form.name }}
+                    <div class="text-danger small">{{ profile_form.name.errors }}</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="{{ profile_form.email.id_for_label }}" class="form-label">Email Address</label>
+                    {{ profile_form.email }}
+                    <div class="text-danger small">{{ profile_form.email.errors }}</div>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="{{ profile_form.userImage.id_for_label }}" class="form-label">Profile Picture</label>
+                    {{ profile_form.userImage }}
+                    <div class="text-danger small">{{ profile_form.userImage.errors }}</div>
+                </div>
+                
+            {% endfor %}
+            
+        </fieldset>
+        
+        <button type="submit" class="btn btn-primary">Save Changes</button>
+    </form>
+</div>
   </body>
 </html>
