--- a/saybabook_app/templates/saybabook_app/account.html
+++ b/saybabook_app/templates/saybabook_app/account.html
@@ -16,65 +16,13 @@
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
-        <div class="mb-3">
-          <label for="{{ user_form.user_name.id_for_label }}" class="form-label"
-            >Username</label
-          >
-          {{ user_form.user_name }}
-          <div class="text-danger small">{{ user_form.user_name.errors }}</div>
-        </div>
+        <h3>User Form Test</h3>
+        {{ user_form.as_p }}
 
         <hr />
 
-        <div class="mb-3">
-          <label
-            for="{{ profile_form.userImage.id_for_label }}"
-            class="form-label"
-            >Profile Picture</label
-          >
-
-          <div class="mb-2">
-            {% if user_profile.userImage %}
-            <img
-              src="{{ user_profile.userImage.url }}"
-              alt="Current Profile Picture"
-              class="img-thumbnail"
-              style="max-width: 150px; max-height: 150px"
-            />
-            {% else %}
-            <p>No profile picture set.</p>
-            {% endif %}
-          </div>
-
-          {{ profile_form.userImage }}
-          <div class="form-text">
-            Upload a new image to change your profile picture.
-          </div>
-          <div class="text-danger small">
-            {{ profile_form.userImage.errors }}
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="{{ profile_form.name.id_for_label }}" class="form-label"
-            >Full Name</label
-          >
-          {{ profile_form.name }}
-          <div class="text-danger small">{{ profile_form.name.errors }}</div>
-        </div>
-
-        <div class="mb-3">
-          <label for="{{ profile_form.email.id_for_label }}" class="form-label"
-            >Email Address</label
-          >
-          {{ profile_form.email }}
-          <div class="form-text">
-            We'll never share your email with anyone else.
-          </div>
-          <div class="text-danger small">{{ profile_form.email.errors }}</div>
-        </div>
-
-        {{ user_form.media }} {{ profile_form.media }}
+        <h3>Profile Form Test</h3>
+        {{ profile_form.as_p }}
 
         <button type="submit" class="btn btn-primary">Save Changes</button>
       </form>
