--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -77,17 +77,17 @@
                         </div>
                         {% endif %}
 
-                        <div class="mb-3">
-                            <label for="{{ user_create_form.user_name.id_for_label }}" class="form-label">Choose Username</label>
-                            {{ user_create_form.user_name }}
-                            <div class="text-danger small">{{ user_create_form.user_name.errors }}</div>
-                        </div>
+                    <div class="mb-3">
+                        <label for="user_name" class="form-label">Enter Username</label>
+                            <input type="text" name="user_name" class="form-control" id="id_user_name_login" required>  
+                        <div class="text-danger small">{{ user_create_form.user_name.errors }}</div>
+                         </div>
 
-                        <div class="mb-3">
-                            <label for="{{ user_create_form.user_password.id_for_label }}" class="form-label">Choose Password</label>
-                            {{ user_create_form.user_password }} 
-                            <div class="text-danger small">{{ user_create_form.user_password.errors }}</div>
-                        </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Enter Password</label>
+                            <input type="password" name="user_password" class="form-control" id="id_login_password" required>
+                        <div class="text-danger small">{{ user_create_form.user_password.errors }}</div>
+                    </div>
 
                         {% comment %} 
                         If your UserAccountForm includes a 'password confirmation' field, render it here
