--- a/saybabook_app/templates/saybabook_app/mybooks.html
+++ b/saybabook_app/templates/saybabook_app/mybooks.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       {% include 'saybabook_app/components/navbar.html' %}
-      {% include 'saybabook_app/components/cardscontent.html' %}
+      {% include 'saybabook_app/components/cardscontent.html' with mode="edit" %}      
       {% include 'saybabook_app/components/bookmodal.html' %}
       {% include 'saybabook_app/components/scripts.html' %}
 
