--- a/saybabook_app/templates/saybabook_app/components/cardscontent.html
+++ b/saybabook_app/templates/saybabook_app/components/cardscontent.html
@@ -63,7 +63,7 @@
             data-book-id="{{ book.pk }}" 
             data-detail-url="{% url 'book.edit' book.pk %}" 
         >
-            Edit Details
+            Edit Detail
         </button>
         {% else %}
                 <button 
