Landing page design in progress, 60% done

--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -4,88 +4,157 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="{% static 'saybabook_app/img/favicon.png' %}">
     <link
       rel="stylesheet"
       href="{% static 'saybabook_app/vendor/bootstrap-5.3.8-dist/css/bootstrap.min.css' %}"
     />
-    <title>Landing Page</title>
+       <link
+      rel="stylesheet"
+      href="{% static 'saybabook_app/css/landingpage.css' %}"
+    />
+    <title>Saybabook</title>
   </head>
   <body>
-         {% include 'saybabook_app/components/navbar.html' %}
+    <!-- Nav Starts Here -->
 
-  <div class="container py-5">
     <div class="row justify-content-center">
-        
-        <div class="col-md-5 mb-4">
-            <div class="card shadow-sm">
-                <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">Existing User Login</h4>
+    <nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+            <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <button  class="btn" type="button" data-bs-toggle="modal" data-bs-target="#registerModal">Register</button>
+        <button  class="btn"type="button" data-bs-toggle="modal" data-bs-target="#loginModal"> Login</button>
+      </form>
+    </div>
+  </div>
+</nav>
+    <!-- Nav Ends Here -->
+    <!-- Nav Modal Login Start Here -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="loginModalLabel">Existing User Login</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                {% if error_message %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error_message }}
                 </div>
-                <div class="card-body">
+                {% endif %}
+
+                <form method="post" action="{% url 'user.login' %}">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="id_login_username" class="form-label">Username</label>
+                        <input type="text" name="username" class="form-control" id="id_login_username" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="id_login_password" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="id_login_password" required>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary w-100">Log In</button>
+                </form>
+            </div>
+            <div class="modal-footer justify-content-center">
+                <small class="text-muted">Forgot your password?</small>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Nav Modal Login Ends Here -->
+<!-- Nav Modal Register Start Here -->
+<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-success text-white">
+                <h5 class="modal-title" id="registerModalLabel">New User Registration</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="{% url 'user.create' %}">
+                    {% csrf_token %}
                     
-                    {% if error_message %}
-                    <div class="alert alert-danger" role="alert">
-                        {{ error_message }}
+                    {{ form.as_p }}
+                    
+                    {% if user_create_form.non_field_errors %}
+                    <div class="alert alert-warning" role="alert">
+                        {{ user_create_form.non_field_errors }}
                     </div>
                     {% endif %}
 
-                    <form method="post" action="{% url 'user.login' %}">
-                        {% csrf_token %}
-                        
-                        <div class="mb-3">
-                            <label for="id_login_username" class="form-label">Username</label>
-                            <input type="text" name="username" class="form-control" id="id_login_username" required>
-                            
-                            {% comment %} 
-                                If you pass the login form as 'login_form' in the context, 
-                                you can use: {{ login_form.username }} 
-                            {% endcomment %}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="id_login_password" class="form-label">Password</label>
-                            <input type="password" name="password" class="form-control" id="id_login_password" required>
-                            
-                            {% comment %} 
-                                If you pass the login form as 'login_form' in the context, 
-                                you can use: {{ login_form.password }} 
-                            {% endcomment %}
-                        </div>
-                        
-                        <button type="submit" class="btn btn-primary w-100">Log In</button>
-                    </form>
-                </div>
-                <div class="card-footer text-center text-muted small">
-                    Forgot your password?
-                </div>
+                    <button type="submit" class="btn btn-success w-100">Register and Log In</button>
+                </form>
             </div>
         </div>
-        
-        <div class="col-md-5 mb-4">
-            <div class="card shadow-sm">
-                <div class="card-header bg-success text-white">
-                    <h4 class="mb-0">New User Registration</h4>
-                </div>
-                <div class="card-body">
-                    
-                    <form method="post" action="{% url 'user.create' %}">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        {% if user_create_form.non_field_errors %}
-                        <div class="alert alert-warning" role="alert">
-                            {{ user_create_form.non_field_errors }}
-                        </div>
-                        {% endif %}
-
-                    
-                        <button type="submit" class="btn btn-success w-100">Register and Log In</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        
     </div>
 </div>
+<section>
+<div class="container" id="brand-name-container">
+    <br>
+    <span class="brand-name"> Saybabook</span>
 </div>
+<div class="container" id="brand-arrowdown-container">
+    <br>
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+</div>
+<div class="container" id="brand-description-container">
+    <br>
+    <p class="brand-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+</div>
+</section>
+<section>
+ <div class="container" id="brand-name-container">
+    <br>
+    <span class="brand-name"> Features</span>
+</div>
+<div class="container" id="brand-arrowdown-container">
+    <br>
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+</div>
+<div class="row" id="features-container">
+    <div class="col-6">
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+        <p>Book Icon</p>
+    </div>
+    <div class="col-6">
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+        <p>Link Icon</p>
+    </div>
+    <div class="container">
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+    <p>Folder Icon</p>
+    </div>
+       <div class="col-6">
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+        <p>Human Icon</p>
+    </div>
+    <div class="col-6">
+    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
+        <p>What Icon</p>
+    </div>
+</div>
+</section>
+<!-- Nav Modal Register Ends Here -->
+      {% include 'saybabook_app/components/scripts.html' %}
+
   </body>
 </html>
